objects/CSS_JobForms__c.object
<CustomObject>
    <fields>
        <fullName>PowerGenLoadBankTest1__c</fullName>
        <description>These field is to store the POWER GEN JSA LOAD BANK first row</description>
        <label>PowerGenLoadBankTest1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerGenLoadBankTest2__c</fullName>
        <label>PowerGenLoadBankTest2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerGenPPELevel__c</fullName>
        <description>These field is for PPE level of POWERGEN JSA</description>
        <label>PowerGenPPELevel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PowerGenPPE__c</fullName>
        <label>PowerGenPPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerGenPrepare1__c</fullName>
        <description>These field is to save the first row of PREPARE power Gen JSA</description>
        <label>PowerGenPrepare1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerGenPrepare2__c</fullName>
        <description>These field is to save the POWER GEN Prepare second row JSA.</description>
        <label>PowerGenPrepare2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerGenPrepare5__c</fullName>
        <label>PowerGenPrepare5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerGenTE1__c</fullName>
        <description>These field is to store POWER GEN JSA first row of TE</description>
        <label>PowerGenTE1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerGenVoltageEquipment__c</fullName>
        <description>These field is to store the POWER GEN JSA voltage equipment</description>
        <label>PowerGenVoltageEquipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PreJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreJob_JSA_Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projectile_Hazard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Projectile Hazard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RebuildUpfit_Task1__c</fullName>
        <label>RebuildUpfit_Task1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Disassembly</fullName>
                </value>
                <value>
                    <fullName>Dyno/Test</fullName>
                </value>
                <value>
                    <fullName>Machine Shop</fullName>
                </value>
                <value>
                    <fullName>Move Engine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RebuildUpfit_Task2__c</fullName>
        <label>RebuildUpfit_Task2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Fire Pump</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remove_locks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove locks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repetitive_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repetitive Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restricted_Work_Spaces__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted Work Spaces</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Top__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Top</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceJob__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ServiceJob</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>CSS_JobForms</relationshipLabel>
        <relationshipName>CSS_JobForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS_JobForms</relationshipLabel>
        <relationshipName>CSS_JobForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Set_to_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set to Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShopService_Task1__c</fullName>
        <label>ShopService_Task1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Truck OTR</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Consumer(Small Genset)</fullName>
                </value>
                <value>
                    <fullName>Refrigeration</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShopService_Task2__c</fullName>
        <label>ShopService_Task2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Truck OTR</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Consumer(Small Genset)</fullName>
                </value>
                <value>
                    <fullName>Refrigeration</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shut_Down_and_De_Energize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shut Down and De-Energize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shutt_Off_Power__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field service JSA and Power Gen JSA</description>
        <label>Shut Off Power</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snow_Ice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snow/Ice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snow_Mud_or_Ice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snow, Mud or Ice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spray_Painting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spray Painting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Static_Access_Platform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Static Access Platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Stool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step Stool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storm_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Storm Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stressful_Posure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stressful Posture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Struck_by_or_Against__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Struck by or Against</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSR_SRNumber__c</fullName>
        <description>Field to store SR Number from TSR System</description>
        <label>TSR_SRNumber</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select One</fullName>
                    <default>true</default>
                    <label>Select One</label>
                </value>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>Auto – Fire Truck</fullName>
                </value>
                <value>
                    <fullName>Auto -Other</fullName>
                </value>
                <value>
                    <fullName>Auto-RV</fullName>
                </value>
                <value>
                    <fullName>Auto-Truck- Bus</fullName>
                </value>
                <value>
                    <fullName>CNG-LNG</fullName>
                </value>
                <value>
                    <fullName>Crane</fullName>
                </value>
                <value>
                    <fullName>Engine/Vehicle Cleaning</fullName>
                </value>
                <value>
                    <fullName>Engine- Assembly</fullName>
                </value>
                <value>
                    <fullName>Engine-Disassembly</fullName>
                </value>
                <value>
                    <fullName>Fire Pump</fullName>
                </value>
                <value>
                    <fullName>Gen set</fullName>
                </value>
                <value>
                    <fullName>HHP- Marine</fullName>
                </value>
                <value>
                    <fullName>HHP- Other</fullName>
                </value>
                <value>
                    <fullName>HHP Rail</fullName>
                </value>
                <value>
                    <fullName>Ind- Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ind- Constr- Logging</fullName>
                </value>
                <value>
                    <fullName>Ind-Other</fullName>
                </value>
                <value>
                    <fullName>Leisure Boat</fullName>
                </value>
                <value>
                    <fullName>Loading/Unloading</fullName>
                </value>
                <value>
                    <fullName>Load Test</fullName>
                </value>
                <value>
                    <fullName>Marine - Non HHP</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Offshore Oil Rig</fullName>
                </value>
                <value>
                    <fullName>Oil-Gas HHP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other – Allied</fullName>
                </value>
                <value>
                    <fullName>Paint</fullName>
                </value>
                <value>
                    <fullName>Parts Cleaning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_the_Machine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test the Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tidal_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marine JSA</description>
        <label>Tidal Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToolingEquipment1__c</fullName>
        <description>These field is store the first row value of Tooling &amp; Equipment1 in inSHOPJSA form</description>
        <label>TOOLING &amp; EQUIPMENT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToolingEquipment2__c</fullName>
        <description>These field is store the second row value of Tooling &amp; Equipment1 in inSHOPJSA form</description>
        <label>ToolingEquipment2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trailing_Cables__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trailing Cables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Understand_the_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Understand the equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uneven_Ground_Gravel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uneven Ground/Gravel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_of_Chemicals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use of Chemicals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_the_Lackout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify the Lockout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vibration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vibration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WORK_AT_HEIGHT_Controls__c</fullName>
        <label>WORK AT HEIGHT_Controls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WORK_AT_HEIGHT_What_Is_Strange__c</fullName>
        <label>WORK AT HEIGHT_What Is Strange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WORK_AT_HEIGHT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WORK AT HEIGHT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WORK_WITH_ELECTRICITY_Control__c</fullName>
        <label>WORK WITH ELECTRICITY_Controls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WORK_WITH_ELECTRICITY_What_Is_Strange__c</fullName>
        <label>WORK WITH ELECTRICITY_What Is Strange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WORK_WITH_ELECTRICITY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WORK WITH ELECTRICITY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wash_Bay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wash Bay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waste_Disposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waste Disposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wet_or_Oily_Floor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wet or Oily Floor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_with_Contractors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work with Contractors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Outside_Railing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marine JSA</description>
        <label>Working Outside Railing</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS_JobForms</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS_JobForms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_JobForms</pluralLabel>
    <recordTypes>
        <fullName>FieldServiceJSA</fullName>
        <active>true</active>
        <label>FieldServiceJSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>InShopJSA</fullName>
        <active>true</active>
        <description>These new record type is created to vary the type of JSA form</description>
        <label>InShopJSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>JSAForms</fullName>
        <active>true</active>
        <label>JSAForms</label>
    </recordTypes>
    <recordTypes>
        <fullName>MarineJSA</fullName>
        <active>true</active>
        <label>MarineJSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>PowerGenJSA</fullName>
        <active>true</active>
        <label>PowerGenJSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>TSREscalation</fullName>
        <active>true</active>
        <label>TSREscalation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>